Fix layout bug introduced in 6780e8b3.

--- a/www/css/style-brutalist.linux.css
+++ b/www/css/style-brutalist.linux.css
@@ -2311,6 +2311,7 @@ ul.comment-thread {
 	flex-basis: 100%;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	white-space: nowrap;
 	line-height: 1.3;
 }
 .conversation-page .comment-meta .comment-post-title {
